--- a/tresrosas/index.html
+++ b/tresrosas/index.html
@@ -3,19 +3,19 @@
   <title>DAVID ALSINA MERCIER </title>    
   <link rel="stylesheet" href="../style/tresrosas.css">  
   <link rel="stylesheet" href="../style/index.css">
-  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="57x57" href=" ../favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href=" ../favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href=" ../favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href=" ../favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href=" ../favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href=" ../favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href=" ../favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href=" ../favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href=" ../favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href=" ../favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href=" ../favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href=" ../favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
@@ -23,13 +23,13 @@
   <a href="/">DAVID ALSINA MERCIER</a>
 </div>
 <div class='LeftArrow'>
-  <a href="lidia.html">
-    <img src="images/FLETXA_INFO.png" alt="arrow"/> 
+  <a href="../lidia/">
+    <img src= "../images/FLETXA_INFO.png" alt="arrow"/> 
   </a>
 </div>
 <div class='RightArrow'>
-  <a href="lectura.html">
-    <img src="images/FLETXA_INFO_D.png" alt="arrow"/> 
+  <a href="../lectura">
+    <img src="../images/FLETXA_INFO_D.png" alt="arrow"/> 
   </a>
 </div>
   <img class="PortadaRosasImg" src='images/TresRosas/PNG_PORTADA_TRESROSAS.png' alt="Portada Tres Rosas"/>
@@ -40,12 +40,12 @@
     estricta religión.
   </p>
     <div class="CocheyActriz">
-      <img src='./images/TresRosas/PNG_CLAQUETA_TRESROSAS.png' alt="coche tres rosas"/>
-      <img src='./images/TresRosas/PNG_ACTRIU_TRESROSAS.png' alt="actriz tres rosas"/> 
+      <img src= '../images/TresRosas/PNG_CLAQUETA_TRESROSAS.png' alt="coche tres rosas"/>
+      <img src= '../images/TresRosas/PNG_ACTRIU_TRESROSAS.png' alt="actriz tres rosas"/> 
     </div> 
-    <img src='./images/TresRosas/PNG_TAULETA_TRESROSAS.png' alt="mesita" class="Mesa"/>
+    <img src= '../images/TresRosas/PNG_TAULETA_TRESROSAS.png' alt="mesita" class="Mesa"/>
     <div class="Lavabo">
-      <img src='./images/TresRosas/PNG_LAVABO_TRESROSAS.png' alt="actriz en el baño"/>
+      <img src= '../images/TresRosas/PNG_LAVABO_TRESROSAS.png' alt="actriz en el baño"/>
     </div>
     <p class="TextoRosas">
     Sexo duro, sadismo y violencia heterosexual matrimonial
@@ -63,9 +63,9 @@
     tres rosas.
     </p>
     <div class="Cajas">
-      <img src='./images/TresRosas/PNG_CAIXA_TRESROSAS.png' alt="caja tres rosas"/>
+      <img src= '../images/TresRosas/PNG_CAIXA_TRESROSAS.png' alt="caja tres rosas"/>
     </div> 
-    <img src='./images/TresRosas/PNG_COTXE_TRESROSAS.png' alt="coche tres rosas" class="Coche"/>
+    <img src= '../images/TresRosas/PNG_COTXE_TRESROSAS.png' alt="coche tres rosas" class="Coche"/>
     <div class="EquipoRosas">
     <p >
       <b>Idea, guión y dirección</b>: <br/> David Alsina
