changes without .html done

--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
 <body>
   <div class='Name'>DAVID ALSINA MERCIER</div>
   <div class='Information'>
-    <a href="information.html">INFO</a>
+    <a href="information/">INFO</a>
   </div>
   <div class='Center'>
     <div class="hover-title">
-      <a href="oasis.html">OASIS<sup>.MOV</sup></a>
+      <a href="oasis/">OASIS<sup>.MOV</sup></a>
     </div>
     <div class="hover-image"><video autoPlay muted loop alt="oasis gif" src='images/Index/MP4_OASIS_HOME.mp4'></video>
     </div>
     <br />
 
     <div class="hover-title">
-      <a href="ego.html">EGO EL MANUAL<sup>.TXT+IMG</sup></a>
+      <a href="ego/">EGO EL MANUAL<sup>.TXT+IMG</sup></a>
     </div>
     <div class="hover-image"><img src='images/Index/PNG_EGO_HOME.jpg' alt="ego el manual" /></div>
     <br />
 
     <div class="hover-title">
-      <a href="lidia.html">LÍDIA OLIU PSICOLOGÍA<sup>.IMG</sup></a>
+      <a href="lidia/">LÍDIA OLIU PSICOLOGÍA<sup>.IMG</sup></a>
     </div>
     <div class="hover-image"><img alt="lidia oliu gif" src='images/Index/PNG_TARGETES_LIDIAOLIU.png'></div>
     <br />
@@ -58,7 +58,7 @@
     <br />
 
     <div class="hover-title">
-      <a href="lectura.html">LECTURA OBLIGATORIA<sup>.MOV</sup></a>
+      <a href="lectura/">LECTURA OBLIGATORIA<sup>.MOV</sup></a>
     </div>
     <div class="hover-image"><video autoPlay muted loop alt="lectura obligatoria gif"
         src='images/Index/MP4_LO_HOME.mp4'></video></div>
