--- a/tresrosas/index.html
+++ b/tresrosas/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>DAVID ALSINA MERCIER </title>    
-  <link rel="stylesheet" href="../style/tresrosas.css">  
+  <link rel="stylesheet" href="tresrosas.css">  
   <link rel="stylesheet" href="../style/index.css">
   <link rel="apple-touch-icon" sizes="57x57" href=" ../favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href=" ../favicon/apple-icon-60x60.png">
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class='Name'>
-  <a href="/">DAVID ALSINA MERCIER</a>
+  <a href="../">DAVID ALSINA MERCIER</a>
 </div>
 <div class='LeftArrow'>
   <a href="../lidia/">
@@ -28,11 +28,11 @@
   </a>
 </div>
 <div class='RightArrow'>
-  <a href="../lectura">
+  <a href="../lectura/">
     <img src="../images/FLETXA_INFO_D.png" alt="arrow"/> 
   </a>
 </div>
-  <img class="PortadaRosasImg" src='images/TresRosas/PNG_PORTADA_TRESROSAS.png' alt="Portada Tres Rosas"/>
+  <img class="PortadaRosasImg" src='images/PNG_PORTADA_TRESROSAS.png' alt="Portada Tres Rosas"/>
   <p class="RosasPrimerTexto">
     <i>TRES ROSAS</i> es un cortometraje de ficción que nace del
     choque cultural en relación a la diversidad sexual.
@@ -40,12 +40,12 @@
     estricta religión.
   </p>
     <div class="CocheyActriz">
-      <img src= '../images/TresRosas/PNG_CLAQUETA_TRESROSAS.png' alt="coche tres rosas"/>
-      <img src= '../images/TresRosas/PNG_ACTRIU_TRESROSAS.png' alt="actriz tres rosas"/> 
+      <img src= 'images/PNG_CLAQUETA_TRESROSAS.png' alt="coche tres rosas"/>
+      <img src= 'images/PNG_ACTRIU_TRESROSAS.png' alt="actriz tres rosas"/> 
     </div> 
-    <img src= '../images/TresRosas/PNG_TAULETA_TRESROSAS.png' alt="mesita" class="Mesa"/>
+    <img src= 'images/PNG_TAULETA_TRESROSAS.png' alt="mesita" class="Mesa"/>
     <div class="Lavabo">
-      <img src= '../images/TresRosas/PNG_LAVABO_TRESROSAS.png' alt="actriz en el baño"/>
+      <img src= 'images/PNG_LAVABO_TRESROSAS.png' alt="actriz en el baño"/>
     </div>
     <p class="TextoRosas">
     Sexo duro, sadismo y violencia heterosexual matrimonial
@@ -63,9 +63,9 @@
     tres rosas.
     </p>
     <div class="Cajas">
-      <img src= '../images/TresRosas/PNG_CAIXA_TRESROSAS.png' alt="caja tres rosas"/>
+      <img src= 'images/PNG_CAIXA_TRESROSAS.png' alt="caja tres rosas"/>
     </div> 
-    <img src= '../images/TresRosas/PNG_COTXE_TRESROSAS.png' alt="coche tres rosas" class="Coche"/>
+    <img src= 'images/PNG_COTXE_TRESROSAS.png' alt="coche tres rosas" class="Coche"/>
     <div class="EquipoRosas">
     <p >
       <b>Idea, guión y dirección</b>: <br/> David Alsina
