changing url names

--- a/egoelmanual/index.html
+++ b/egoelmanual/index.html
@@ -30,7 +30,7 @@
     </a>
   </div>
   <div class='RightArrow'>
-    <a href="../lidia/">
+    <a href="../lidiaoliupsicologia/">
       <img src="../images/FLETXA_INFO_D.png" alt="arrow" />
     </a>
   </div>
