--- a/lidiaoliupsicologia/index.html
+++ b/lidiaoliupsicologia/index.html
@@ -25,7 +25,7 @@
     <a href="../">DAVID ALSINA MERCIER</a>
   </div>
   <div class="LeftArrow">
-    <a href="../ego/">
+    <a href="../egoelmanual/">
       <img src="../images/FLETXA_INFO.png" alt="arrow" />
     </a>
   </div>
