--- a/oasis/index.html
+++ b/oasis/index.html
@@ -25,12 +25,12 @@
     <a href="../">DAVID ALSINA MERCIER</a>
   </div>
   <div class='LeftArrow'>
-    <a href="../lectura/">
+    <a href="../lecturaobligatoria/">
       <img src='../images/FLETXA_INFO.png' alt="arrow" />
     </a>
   </div>
   <div class='RightArrow'>
-    <a href="../ego/">
+    <a href="../egoelmanual/">
       <img src='../images/FLETXA_INFO_D.png' alt="arrow" />
     </a>
   </div>
