--- a/tresrosas/index.html
+++ b/tresrosas/index.html
@@ -23,12 +23,12 @@
   <a href="../">DAVID ALSINA MERCIER</a>
 </div>
 <div class='LeftArrow'>
-  <a href="../lidia/">
+  <a href="../lidiaoliupsicologia/">
     <img src= "../images/FLETXA_INFO.png" alt="arrow"/> 
   </a>
 </div>
 <div class='RightArrow'>
-  <a href="../lectura/">
+  <a href="../lecturaobligatoria/">
     <img src="../images/FLETXA_INFO_D.png" alt="arrow"/> 
   </a>
 </div>
