--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 <head>
   <title>DAVID ALSINA MERCIER </title>
-  <meta name="description" Portfolio page of David Alsina Mercier>
+  <meta name="description" content="Portfolio page of David Alsina Mercier">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="apple-mobile-web-app-title" content="DAVID ALSINA MERCIER">
+  <meta name="keywords" content="portfolio, design, diseño, graphic design, diseño grafico, audiovisuales">
+  <meta name="author" content="Clara Gubau">
   <link rel="stylesheet" href="style/index.css" type="text/css">
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
@@ -19,6 +24,8 @@
   <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
+  <link rel="canonical" href="https://davidalsinamercier.com">
+
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
