--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XBY7TTFYMK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XBY7TTFYMK');
+  </script>
 </head>
 
 <body>
