trying to improve seo

--- a/oasis/index.html
+++ b/oasis/index.html
@@ -1,7 +1,16 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <title>DAVID ALSINA MERCIER </title>
+
+  <meta name="description" content="Oasis project page of David Alsina Mercier">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="apple-mobile-web-app-title" content="DAVID ALSINA MERCIER">
+  <meta name="keywords" content="portfolio, design, diseño, graphic design, diseño grafico, audiovisuales, oasis, cortometraje">
+  <meta name="author" content="Clara Gubau">
+
+
   <link rel="stylesheet" href="./oasis.css">
   <link rel="stylesheet" href="../style/index.css">
   <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png">
