still strying to improve seo

--- a/tresrosas/index.html
+++ b/tresrosas/index.html
@@ -1,8 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <title>DAVID ALSINA MERCIER </title>    
+
   <link rel="stylesheet" href="tresrosas.css">  
   <link rel="stylesheet" href="../style/index.css">
+
+  <meta name="description" content="Portfolio page of David Alsina Mercier">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="apple-mobile-web-app-title" content="DAVID ALSINA MERCIER">
+  <meta name="keywords" content="portfolio, design, diseño, graphic design, diseño grafico, audiovisuales, tresrosas, cortometraje">
+  <meta name="author" content="Clara Gubau">
+
   <link rel="apple-touch-icon" sizes="57x57" href=" ../favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href=" ../favicon/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href=" ../favicon/apple-icon-72x72.png">
