--- a/lidiaoliupsicologia/index.html
+++ b/lidiaoliupsicologia/index.html
@@ -1,6 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 
-<head>
+<head>  
+  <title>DAVID ALSINA MERCIER</title>
+
+  <meta name="description" content="Project page of David Alsina Mercier">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="apple-mobile-web-app-title" content="DAVID ALSINA MERCIER">
+  <meta name="keywords" content="portfolio, design, diseño, graphic design, diseño grafico, audiovisuales, psicologia, lidia oliu">
+  <meta name="author" content="Clara Gubau">
+
+
+  <link rel="stylesheet" href="lidia.css" />
+  <link rel="stylesheet" href="../style/index.css" />
+
   <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href=" ../favicon/apple-icon-72x72.png" />
@@ -15,9 +29,6 @@
   <link rel="icon" type="image/png" sizes="96x96" href=" ../favicon/favicon-96x96.png" />
   <link rel="icon" type="image/png" sizes="16x16" href=" ../favicon/favicon-16x16.png" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="lidia.css" />
-  <link rel="stylesheet" href="../style/index.css" />
-  <title>DAVID ALSINA MERCIER</title>
 </head>
 
 <body>
