--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -32,5 +32,5 @@
 </head>
 
 <body>
-    <video autoplay loop playsinline src=" images/MAGRADES.mp4" class="MagradesVideo"></video>
+    <video controls src=" images/MAGRADES.mp4" class="MagradesVideo"></video>
 </body>
