--- a/residus/totespari/index.html
+++ b/residus/totespari/index.html
@@ -12,7 +12,7 @@
         content="portfolio, design, diseño, graphic design, diseño grafico, audiovisuales, psicologia, lidia oliu">
     <meta name="author" content="Clara Gubau">
 
-    <link rel="stylesheet" href="magrades.css" />
+    <link rel="stylesheet" href="totespari.css" />
     <link rel="stylesheet" href="../../style/index.css" />
 
     <link rel="apple-touch-icon" sizes="57x57" href=".././favicon/apple-icon-57x57.png" />
