--- a/residus/unfillunllibreunarbre/index.html
+++ b/residus/unfillunllibreunarbre/index.html
@@ -32,5 +32,5 @@
 </head>
 
 <body>
-    <video controls src="FILL.mp4" class="ArbreVideo"></video>
+    <video controls="true" autoplay playsinline src="FILL.mp4" class="ArbreVideo"></video>
 </body>
