--- a/residus/unfillunllibreunarbre/index.html
+++ b/residus/unfillunllibreunarbre/index.html
@@ -32,5 +32,7 @@
 </head>
 
 <body>
-    <video controls="true" autoplay playsinline src="FILL.mp4" class="ArbreVideo"></video>
+    <video controls preload="metadata" autoplay playsinline src="FILL.mp4" type="video/mp4" class="ArbreVideo">
+        Putes:)
+    </video>
 </body>
