--- a/residus/unfillunllibreunarbre/index.html
+++ b/residus/unfillunllibreunarbre/index.html
@@ -33,7 +33,8 @@
 
 <body>
     david tonto
-    <video controls preload="metadata" autoplay playsinline src="FILL.mp4" type="video/mp4" class="ArbreVideo">
+    <!-- <video preload="metadata" autoplay playsinline src="FILL.mp4" type="video/mp4" class="ArbreVideo"> -->
+    <video autoPlay muted loop alt="oasis gif" class="ArbreVideo" src="FILL.mp4">
         Putes:)
     </video>
 </body>
