--- a/residus/unfillunllibreunarbre/index.html
+++ b/residus/unfillunllibreunarbre/index.html
@@ -32,9 +32,9 @@
 </head>
 
 <body>
-    david tonto dos
+    david tonto tres
     <!-- <video preload="metadata" autoplay playsinline src="FILL.mp4" type="video/mp4" class="ArbreVideo"> -->
-    <video autoPlay muted loop alt="oasis gif" class="ArbreVideo" src="FILL.mp4">
+    <video autoplay muted loop alt="arbre video" class="ArbreVideo" src="FILL.mp4">
         Putes:)
     </video>
 </body>
