--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -32,5 +32,7 @@
 </head>
 
 <body>
-    <video controls src="MAGRADES.mp4" class="MagradesVideo"></video>
+    david putes
+    <video controls src=" MAGRADES.mp4" class="MagradesVideo"></video>
+
 </body>
