--- a/residus/unfillunllibreunarbre/index.html
+++ b/residus/unfillunllibreunarbre/index.html
@@ -34,7 +34,7 @@
 <body>
     david tonto 4
     <!-- <video preload="metadata" autoplay playsinline src="FILL.mp4" type="video/mp4" class="ArbreVideo"> -->
-    <video autoplay loop playsinline alt="arbre video" class="ArbreVideo" src="FILL.mp4">
+    <video controls alt="arbre video" class="ArbreVideo" src="FILL.mp4">
         Putes:)
     </video>
 </body>
