--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    david putes
-    <video controls src=" MAGRADES.mp4" class="MagradesVideo"></video>
+    david putes 1
+    <video autoplay loop playsinline src=" MAGRADES.mp4" class="MagradesVideo"></video>
 
 </body>
