trying lidia video

--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -32,7 +32,8 @@
 </head>
 
 <body>
-    david putes 1
-    <video autoplay loop playsinline src=" MAGRADES.mp4" class="MagradesVideo"></video>
+    david putes
+    <!-- <video controls src=" MAGRADES.mp4" class="MagradesVideo"></video> -->
+    <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video>
 
 </body>
