--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -33,7 +33,7 @@
 
 <body>
     david putes
-    <!-- <video controls src=" MAGRADES.mp4" class="MagradesVideo"></video> -->
-    <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video>
+    <video autoplay loop muted playsinline src=" MAGRADES.mp4" class="MagradesVideo"></video>
+    <!-- <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video> -->
 
 </body>
