post lidia video

--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -32,8 +32,8 @@
 </head>
 
 <body>
-    david putes
-    <video autoplay loop muted playsinline src=" MAGRADES.mp4" class="MagradesVideo"></video>
+    david putes 2
+    <video autoplay loop muted playsinline src=" MAGRADES.mp4" class="LidiaVideo"></video>
     <!-- <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video> -->
 
 </body>
