--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -32,8 +32,10 @@
 </head>
 
 <body>
-    david putes 4
-    <video autoplay loop muted playsinline src="MAGRADES.webm" class="LidiaVideo"></video>
+    david putes 5
+    <video controls>
+        <source src="MAGRADES.webm" type="video/webm">
+    </video>
     <!-- <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video> -->
 
 </body>
