--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -32,9 +32,9 @@
 </head>
 
 <body>
-    david putes 6
+    david putes 1
     <video controls>
-        <source src="MAGRADES.mp4" type="video/mp4">
+        <source src="MAGRADES.m4v" type="video/m4v">
     </video>
     <!-- <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video> -->
 
