--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -33,8 +33,9 @@
 
 <body>
     david putes 1
-    <video controls="controls" height="360" preload="none"
-        src="https://s3.eu-central-1.amazonaws.com/pipe.public.content/short.mp4" width="600"></video>
+    <!-- <video controls="controls" height="360" preload="none"
+        src="https://s3.eu-central-1.amazonaws.com/pipe.public.content/short.mp4" width="600"></video> -->
+    <video controls="controls" height="360" preload="none" src="MAGRADES.mp4" width="600"></video>
     <video controls>
         <source src="MAGRADES.mp4" type="video/mp4">
         <source src="MAGRADES.webm" type="video/webm">
