--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -32,13 +32,11 @@
 </head>
 
 <body>
-    david putes 2
+    david putes 24
     <!-- <video controls="controls" height="360" preload="none"
         src="https://s3.eu-central-1.amazonaws.com/pipe.public.content/short.mp4" width="600"></video> -->
     <video controls>
-        <source src="MAGRADES.mp4" type="video/mp4">
-        <source src="MAGRADES.webm" type="video/webm">
-        <source src="https://davidportfolio.s3.eu-west-3.amazonaws.com/MAGRADES.mp4">
+        <source src="https://davidportfolio.s3.eu-west-3.amazonaws.com/MAGRADES.mp4" type="video/mp4">
     </video>
     <!-- <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video> -->
 
