--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -35,8 +35,8 @@
     david putes 24
     <!-- <video controls="controls" height="360" preload="none"
         src="https://s3.eu-central-1.amazonaws.com/pipe.public.content/short.mp4" width="600"></video> -->
-    <video controls>
-        <source src="https://davidportfolio.s3.eu-west-3.amazonaws.com/MAGRADES.mp4" type="video/mp4">
+    <video controls preload="auto" width="1600" height="900">
+        <source src=" https://davidportfolio.s3.eu-west-3.amazonaws.com/MAGRADES.mp4" type="video/mp4" />
     </video>
     <!-- <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video> -->
 
