--- a/residus/intro/index.html
+++ b/residus/intro/index.html
@@ -32,5 +32,7 @@
 </head>
 
 <body>
-    <video controls src="INTRO.mp4" class="IntroVideo"></video>
+    <video controls src="https://davidportfolio.s3.eu-west-3.amazonaws.com/INTRO.mp4">
+        video not charging
+    </video>
 </body>
