--- a/residus/intro/index.html
+++ b/residus/intro/index.html
@@ -34,14 +34,16 @@
 </head>
 
 <body>
-    <!-- <video id="my-video" class="video-js" controls preload="auto" width="640" height="264" data-setup="{}">
+    dio no se
+    <video id="my-video" class="video-js" controls preload="auto" width="640" height="264" data-setup="{}">
         <source src="https://davidportfolio.s3.eu-west-3.amazonaws.com/CHEF+DE+TECHO.mp4" type="video/mp4" />
         <!-- <p class="vjs-no-js">
             To view this video please enable JavaScript, and consider upgrading to a
             web browser that
             <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
         </p> -->
-    <video controls src="INTROs.mp4" alt="italian trulli">
+    </video>
+    <video controls src="https://davidportfolio.s3.eu-west-3.amazonaws.com/INTRO+(1).mp4">
         video not charging
     </video>
     <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
