--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -38,6 +38,9 @@
     <video controls preload="auto" width="1600" height="900">
         <source src=" https://davidportfolio.s3.eu-west-3.amazonaws.com/MAGRADES.mp4" type="video/mp4" />
     </video>
+    <video>
+        <source src="MAGRADESNT.mp4" type="video/mp4" />
+    </video>
     <!-- <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video> -->
 
 </body>
