--- a/residus/unfillunllibreunarbre/index.html
+++ b/residus/unfillunllibreunarbre/index.html
@@ -32,9 +32,5 @@
 </head>
 
 <body>
-    david tonto 4
-    <!-- <video preload="metadata" autoplay playsinline src="FILL.mp4" type="video/mp4" class="ArbreVideo"> -->
-    <video controls alt="arbre video" class="ArbreVideo" src="FILL.mp4">
-        Putes:)
-    </video>
+    <video controls src="FILL.mp4" class="ArbreVideo"></video>
 </body>
