--- a/residus/intro/index.html
+++ b/residus/intro/index.html
@@ -29,11 +29,9 @@
     <link rel="icon" type="image/png" sizes="96x96" href="../../favicon/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="../../favicon/favicon-16x16.png" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+
 </head>
 
 <body>
-    dio no se
-    <video controls src="yt1s.com - into 1_360p.mp4">
-        video not charging
-    </video>
+    <video controls src="INTRO.mp4" class="IntroVideo"></video>
 </body>
