--- a/residus/magrades/index.html
+++ b/residus/magrades/index.html
@@ -32,12 +32,5 @@
 </head>
 
 <body>
-    david putes 2
-    <!-- <video controls="controls" height="360" preload="none"
-        src="https://s3.eu-central-1.amazonaws.com/pipe.public.content/short.mp4" width="600"></video> -->
-    <video controls preload="auto">
-        <source src="MAGRADESNT.mp4" type="video/mp4" />
-    </video>
-    <!-- <video autoplay loop muted playsinline src="MP4_ANIMACIO_LIDIAOLIU.mp4" class="LidiaVideo"></video> -->
-
+    <video controls src="MAGRADES.mp4" class="MagradesVideo"></video>
 </body>
